Improved the loading display for enlist

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -119,7 +119,7 @@
 .loading {
   display: flex;
   flex-direction: column;
-  padding: 10em 50em 10em;
+  padding: 10em 20em;
   .spinner-text {
     font-weight: bold;
     font-size: 2em;
@@ -127,6 +127,7 @@
   .spinner {
     width: 20vw;
     height: auto;
+    align-self: center;
   }
 }
 
