Opitmalisation for domits

--- a/web/src/components/base/Login.css
+++ b/web/src/components/base/Login.css
@@ -107,3 +107,22 @@ label {
     color: white;
     border-radius: 5px;
 }
+.passwordContainer {
+    position: relative;
+}
+
+.loginInput {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.togglePasswordButton {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
