--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -333,7 +333,7 @@
     width: calc(120% - 1.875rem);
     left: 50%;
     right: 50%;
-    top: -270%;
+    top: -275%;
   }
 }
 
@@ -480,7 +480,7 @@
     flex-direction: column;
     align-items: flex-start;
     height: auto;
-    padding: 10px;
+    padding: 0.6rem;
     box-sizing: border-box;
   }
 }
@@ -622,11 +622,11 @@
   .mobile-search-button {
     display: block;
     width: 100%;
-    max-width: 300px;
+    /* max-width: 300px; */
     padding: 0.8rem; 
     background-color: #ffffff;
     border: 1px solid #e2e2e4;
-    border-radius: 1.8rem; 
+    border-radius: 0.8rem; 
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     font-size: 1rem;
     color: #484848;
@@ -649,3 +649,4 @@
     display: block;
   }
 }
+
