--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -1,4 +1,4 @@
-.bar {
+.Search-bar {
   width: 45rem;
   margin: auto;
   box-shadow: 0 0 5px hsl(0 0% 78%);
@@ -9,14 +9,14 @@
   box-sizing: border-box;
 }
 
-.bar .searchInputContainer {
+.Search-bar .Search-searchInputContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 0.3125rem;
 }
 
-.suggestions-container {
+.Search-suggestions-container {
   position: relative;
   z-index: 1;
 }
@@ -34,16 +34,16 @@
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
   text-overflow: ellipsis;
+  transform: translateY(-15%);
 
 }
-.check-in {
+.Search-check-in {
   width: 17%;
   cursor: auto;
 }
-.location {
+.Search-location {
   width: 34%;
 }
-
 
 .input-calendar {
   background: none;
@@ -53,35 +53,35 @@
   height: 3.5rem;
 }
 
-.bar>div {
+.Search-bar>div {
   position: relative;
   transition: background 150ms ease, width 150ms ease;
 }
 
-.bar>div::before {
+.Search-bar>div::before {
   position: absolute;
   content: "";
   left: -1.85%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-40%);
   width: 0.05rem;
   height: 60%;
   background: rgb(88, 153, 22);
 }
 
-.bar>div:nth-of-type(1)::before {
+.Search-bar>div:nth-of-type(1)::before {
   background: transparent;
 }
 
-.bar>div:nth-of-type(3)::before {
+.Search-bar>div:nth-of-type(3)::before {
   transform: translateY(-40%);
   left: -0.01%;
 }
 
-.bar>div:nth-of-type(4)::before {
+.Search-bar>div:nth-of-type(4)::before {
   background: solid;
   height: 56%;
-  transform: translateY(-43%);
+  transform: translateY(-40%);
 }
 
 .DatePicker__calendarContainer {
@@ -128,7 +128,7 @@
   margin-right: 1rem;
 }
 
-.searchBar {
+.searchBar_inputfield {
   background: none;
   border: none;
   text-align: left;
@@ -141,11 +141,11 @@
   border-radius: 10px;
 } */
 
-.searchBar:focus {
+.searchBar_inputfield:focus {
   outline: none;
 }
 
-.searchBar::placeholder {
+.searchBar_inputfield::placeholder {
   color: #0D9813;
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
@@ -153,7 +153,7 @@
   margin: auto;
 }
 
-.button-section {
+.Search-button-section {
   border: none;
   display: flex;
   justify-content: center;
@@ -165,7 +165,7 @@
   width: 13%;
 }
 
-.error-message {
+.Search-error-message {
   background-color: #f8d7da;
   color: #721c24;
   border: 2px solid #f5c6cb;
@@ -181,7 +181,7 @@
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-.guest-dropdown {
+.Search-guest-dropdown {
   display: none;
   position: absolute;
   top: calc(100% + 0.625rem);
@@ -198,7 +198,7 @@
   cursor: auto;
 }
 
-.guest-dropdown.active {
+.Search-guest-dropdown.active {
   display: block;
   opacity: 1;
   transform: translateX(-50%) scale(1);
@@ -216,15 +216,15 @@
   }
 }
 
-.guest-dropdown.active {
+.Search-guest-dropdown.active {
   animation: dropdownFadeIn 0.3s ease;
 }
 
-.button-section.active .guest-dropdown {
+.Search-button-section.active .Search-guest-dropdown {
   display: block;
 }
 
-.guestCounter {
+.Search-guestCounter {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -232,38 +232,38 @@
   border-bottom: 1px solid #0a770f;
 }
 
-.guestCounter:last-child {
+.Search-guestCounter:last-child {
   border-bottom: none;
 }
 
-.guestLabel {
+.Search-guestLabel {
   font-size: 1rem;
   color: #0a770f;
   text-align: left;
 }
 
-.selected {
+.Search-selected {
   color: green;
 }
 
-.guestDescription {
+.Search-guestDescription {
   font-size: 0.7rem;
   color: #666;
   text-align: left;
 }
 
-.guestCounter .controls {
+.Search-guestCounter .Search-controls {
   display: flex;
   align-items: center;
   padding: 0 0.625rem;
 }
 
-.guestCounter .controls span {
+.Search-guestCounter .Search-controls span {
   margin: 0 0.625rem;
   font-size: 1rem;
 }
 
-.guestCounter .controls button {
+.Search-guestCounter .Search-controls button {
   border: 2px solid #cccccc;
   border-radius: 50%;
   background-color: #fff;
@@ -278,12 +278,12 @@
   color: #000;
 }
 
-.guestCounter .controls button:hover {
+.Search-guestCounter .Search-controls button:hover {
   border-color: #0a770f;
 }
 
 /* test */
-.guestCounter .controls button:disabled {
+.Search-guestCounter .Search-controls button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
@@ -301,19 +301,17 @@
 
 }
 
-.button-section {
+.Search-button-section {
   margin-bottom: 1.8125rem;
 }
 
-.guestP {
+.Search-guestP {
   text-align: left;
   font-weight: 500;
   color: #000;
   font-size: 0.75rem;
   margin-top: 1rem;
 }
-
-
 
 .responsive-calendar {
   font-size: 11px !important;
@@ -328,8 +326,8 @@
   transform: translateY(0);
 }
 
-@media (max-width: 730px) {
-  .guest-dropdown {
+@media (max-width: 768px) {
+  .Search-guest-dropdown {
     width: calc(120% - 1.875rem);
     left: 50%;
     right: 50%;
@@ -338,7 +336,7 @@
 }
 
 @media (max-width: 1000px) {
-  .bar {
+  .Search-bar {
     width: 95%;
   }
 }
@@ -361,7 +359,7 @@
   }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 768px) {
   .responsive-calendar {
     font-size: 0.7rem !important;
   }
@@ -383,7 +381,7 @@
   }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 768px) {
 
   .Calendar__monthSelectorItemText,
   .Calendar__yearSelectorText {
@@ -458,7 +456,7 @@
   color: inherit;
 }
 
-@media (max-width: 730px) {
+@media (max-width: 768px) {
 
   .input-calendar,
   .DatePicker__input {
@@ -466,8 +464,8 @@
   }
 }
 
-@media (max-width: 730px) {
-  .bar {
+@media (max-width: 768px) {
+  .Search-bar {
     border: 2px solid #0a770f;
     width: 110%;
     max-width: 400px;
@@ -485,23 +483,21 @@
   }
 }
 
-@media (max-width: 730px) {
-
-
-  .button-section,
+@media (max-width: 768px) {
+  .Search-button-section,
   .searchInputContainer,
-  .check-in {
+  .Search-check-in {
     background-color: #f0f0f0;
     border-radius: 0.8rem;
     width: 100%;
     margin-bottom: 0.4rem;
   }
 
-  .check-in {
+  .Search-check-in {
     height: 3.4rem;
   }
 
-  .location {
+  .Search-location {
     background-color: #f0f0f0;
     border-radius: 0.8rem;
     width: 100%;
@@ -510,7 +506,7 @@
     text-overflow: ellipsis;
   }
 
-  .searchBar {
+  .searchBar_inputfield {
     position: relative;
     background: none;
     border: none;
@@ -522,15 +518,15 @@
     margin: auto;
   }
   /* kan problemen veroorzaken bij mobile-view */
-  .searchBar::placeholder {
+  .searchBar_inputfield::placeholder {
     transform: translateX(2.5%)
   }
 
-  .searchBar * {
+  .searchBar_inputfield * {
     margin: auto;
   }
 
-  .button-section {
+  .Search-button-section {
     background-color: #f0f0f0;
     border-radius: 0.8rem;
     width: 100%;
@@ -548,7 +544,7 @@
     text-align: center;
     text-overflow: ellipsis;
   }
-  .guestP {
+  .Search-guestP {
     position: absolute;
   }
   .input-calendar {
@@ -573,7 +569,7 @@
     transform: translateX(-2.25%);
     margin-top: 0.5rem;
   }
-  .bar>div::before {
+  .Search-bar>div::before {
     background: transparent;
   }
   .DatePicker__calendarContainer {
@@ -585,10 +581,10 @@
   .DatePicker__calendarArrow {
     border-color: transparent;
   }
-  .ClearButton {
+  .Search-ClearButton {
     margin-top: 0.5rem;
   }
-  .error-message {
+  .Search-error-message {
     background-color: #f8d7da;
     color: #721c24;
     border: 2px solid #f5c6cb;
@@ -616,12 +612,12 @@
   display: none;
 }
 
-@media (max-width: 730px) {
+@media (max-width: 768px) {
   .search-text {
     display: inline;
   }
 }
-@media (max-width: 730px) {
+@media (max-width: 768px) {
   .mobile-search-button {
     display: block;
     width: 75vw;
@@ -644,11 +640,11 @@
   }
   
 
-  .bar {
+  .Search-bar {
     display: none;
   }
 
-  .bar-container .bar {
+  .bar-container .Search-bar {
     display: block;
   }
 }
