--- a/web/src/components/hostdashboard/Calendar.module.css
+++ b/web/src/components/hostdashboard/Calendar.module.css
@@ -2,7 +2,7 @@
     margin: 0;
     box-sizing: border-box;
     padding: 2rem;
-    background: linear-gradient(to bottom, #0065C9, #003366);
+    background: linear-gradient(to bottom left, #003366, #0D9813);
 
 }
 .calendar {
