--- a/web/src/components/chat/chat.css
+++ b/web/src/components/chat/chat.css
@@ -612,15 +612,33 @@ a{
     }
 
     .chat__people{
+      
+    }
+
+
+    .chat__people.active {
         width: 100%;
         height: 100%;
         margin-bottom: 200px;
-        display: none;
-    }
-
-    .chat__message{
-        width: 100%;
-    }
+        display: flex; 
+      }
+    
+      .chat__message {
+        display: none; 
+      }
+    
+      .chat__people {
+        display: none; 
+      }
+    
+      .chat__message.active {
+        display: flex;
+        width: 100%; 
+        flex-direction: column;
+        height: 80vh;
+        justify-content: center;
+        align-items: center;
+      }
 
 
     .chat__heading{
