Added multiple date ranges selection

--- a/web/src/components/hostdashboard/Calendar.module.css
+++ b/web/src/components/hostdashboard/Calendar.module.css
@@ -91,4 +91,8 @@
     .inactive {
         color: #cccccc;
     }
+    .selected {
+        color: #FFFFFF;
+        background: linear-gradient(to bottom left, #003366, #0D9813);
+    }
 }
