--- a/web/src/components/about/about.css
+++ b/web/src/components/about/about.css
@@ -1,4 +1,4 @@
-.aboutus{
+.about {
     width: 90%;
     margin: auto;
     margin-top: 40px;
@@ -7,12 +7,19 @@
     font-style: normal;
 }
 
-.aboutus h3 {
+.about__subtitle-container h3 {
     font-family: 'Kanit', sans-serif;
     font-weight: 400;
 }
 
-.factsbox{
+.about__fact-subtitle{
+    margin: 0;
+  font-size: 22px;
+  font-size: clamp(0.8rem, 1.2vw + 0.8rem, 1.5rem);
+  color: white;
+}
+
+.about__factsbox {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -20,12 +27,12 @@
     gap: 3.75rem;
 }
 
-.AboutDomitsTitleContainer{
+.about__title-container {
     display: flex;
     align-items: flex-start;
 }
 
-.awesomefacts{
+.about__fact {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -38,37 +45,36 @@
     position: relative;
 }
 
-.aboutText {
+.about__text {
     font-size: 1.25rem;
     color: black;
     margin: 0rem;
 }
 
-.aboutWhoWeAreText{
+.about__who-we-are-title {
     text-align: left;
 }
 
-.marginbottom{
+.about__who-we-are-subtitle--marginbottom {
     margin-bottom: 4rem;
 }
 
-.margintop{
+.about__text--margintop {
     margin-top: 1.2rem;
 }
 
-.factsText {
+.about__fact-text {
     margin-top: 20px;
     color: white;
 }
 
-.factsTitle {
+.about__fact-title {
     margin: 0;
-    /* font-size: 22px; */
     font-size: clamp(0.8rem, 1.2vw + 0.8rem, 1.5rem);    
     color: white;
 }
 
-.factsHeader {
+.about__fact-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -78,16 +84,16 @@
     margin-bottom: 10px;
 }
 
-.factsImage {
+.about__fact-image {
     height: auto;
     object-fit: contain;
 }
 
-
-.crew {
+.about__crew {
     text-align: center;
 }
-.team {
+
+.about__team {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -95,16 +101,16 @@
     margin-top: 20px;
 }
 
-.member {
+.about__member {
     width: 20%;
     margin-bottom: 20px;
 }
 
-.member > p:nth-of-type(1) {
+.about__member > p:nth-of-type(1) {
     color: var(--primary-color);
 }
 
-.avatar {
+.about__avatar {
     height: 100px;
     width: 100px;
     background-color: white;
@@ -113,50 +119,50 @@
     margin-bottom: 10px;
 }
 
-.avatar img {
+.about__avatar-image {
     height: 100px;
     width: 100px;
     border-radius: 50%;
 }
 
-.about {
+.about__footer {
     text-align: left;
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
 }
 
-.about p {
+.about__footer p {
     color: black;
     font-size: 1.25rem;
 }
 
-.about p:first-child {
+.about__footer p:first-child {
     margin-right: 50px;
 }
 
 @media (max-width: 850px) {
-    .member {
+    .about__member {
         width: 100%;
     }
-    .factsbox{
+    .about__factsbox {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .awesomefacts {
+    .about__fact {
         width: 100%;
     }
-    .factsHeader {
+    .about__fact-header {
         flex-direction: column-reverse;
     }
-    .about {
+    .about__footer {
         flex-direction: column;
     }
-    .about p:first-child {
+    .about__footer p:first-child {
         margin: 0 0 25px 0;
     }
-    .about p {
+    .about__footer p {
         width: 100%;
     }
 }
