Finished implementation new calendar for booking engine

--- a/web/src/components/booking/BookingCalendar.module.css
+++ b/web/src/components/booking/BookingCalendar.module.css
@@ -1,8 +1,9 @@
 .body {
     margin: 0;
     box-sizing: border-box;
-    padding: 2rem;
-    background: linear-gradient(to bottom left, #003366, #0D9813);
+    padding: 0.5rem;
+    border-radius: 0.75rem;
+    background: black;
     display: flex;
     flex-direction: column;
     gap: 5%;
