--- a/web/src/components/about/release.css
+++ b/web/src/components/about/release.css
@@ -5,29 +5,29 @@
   font-family: Arial, sans-serif;
 }
 
-.release-header-container {
+.release__header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 50px auto;
 }
 
-.release-header {
+.release__header {
   margin-left: 50px;
   text-align: left;
 }
 
-.release-header h1 {
+.release__title {
   font-size: 2.5em;
   margin-bottom: 10px;
 }
 
-.release-header h4 {
+.release__subtitle {
   font-size: 1.2em;
   margin-bottom: 5px;
 }
 
-.release-header button {
+.release__button {
   background-color: #4CAF50;
   color: white;
   border: none;
@@ -38,22 +38,22 @@
   margin-top: 20px;
 }
 
-.release-header button:hover {
+.release__button:hover {
   background-color: #45a049;
 }
 
-.image-header {
+.release__image-header {
   width: 380px;
   max-width: 400px;
 }
 
-.release-notes {
+.release__notes {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
-.release-item {
+.release__item {
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 20px;
@@ -62,37 +62,37 @@
   transition: transform 0.3s;
 }
 
-.release-item img {
+.release__item-image {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
   margin-bottom: 15px;
 }
 
-.release-item h4 {
+.release__item-title {
   font-size: 1.2em;
   margin-bottom: 10px;
 }
 
-.release-item p {
+.release__item-text {
   font-size: 1em;
   display: none;
 }
 
-.release-item.expanded p {
+.release__item--expanded .release__item-text {
   display: block;
 }
 
-.release-item:hover {
+.release__item:hover {
   transform: scale(1.05);
 }
 
 @media screen and (max-width: 768px) {
-  .release-notes {
+  .release__notes {
     grid-template-columns: 1fr;
   }
 
-  .image-header {
+  .release__image-header {
     margin-left: 0;
     margin-top: 20px;
     max-width: 200px;
