Web: beide dashboards navbar tabs worden groen wanneer je op die pagina zit

--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -85,6 +85,15 @@
   transition: .3s;
 }
 
+.wijzer.active {
+  background-color: #0D9813;
+  color: white;
+}
+
+.wijzer.active p {
+  color: white;
+}
+
 
 .dashboardSection {
   display: flex;
