--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -47,6 +47,15 @@
     transition: .3s;
 }
 
+.wijzers.active {
+    background-color: #0D9813;
+    color: white;
+  }
+  
+  .wijzers.active p {
+    color: white;
+  }
+
 
 .disabled:hover {
     cursor: not-allowed;
